--- a/index.html
+++ b/index.html
@@ -7,6 +7,30 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="calc">
+      <div class="calc-screen">0</div>
+      <div class="calc-btns">
+        <div class="btn btn-9">9</div>
+        <div class="btn btn-8">8</div>
+        <div class="btn btn-7">7</div>
+        <div class="btn btn-6">6</div>
+        <div class="btn btn-5">5</div>
+        <div class="btn btn-4">4</div>
+        <div class="btn btn-3">3</div>
+        <div class="btn btn-2">2</div>
+        <div class="btn btn-1">1</div>
+        <div class="btn btn-0">0</div>
+        <div class="btn btn-plus sym">+</div>
+        <div class="btn btn-minus sym">-</div>
+        <div class="btn btn-multiply sym">*</div>
+        <div class="btn btn-divide sym">/</div>
+        <div class="btn btn-equals sym">=</div>
+        <div class="btn btn-period">.</div>
+        <div class="btn btn-c sym">C</div>
+        <div class="btn btn-ce sym">CE</div>
+        <div class="btn btn-del sym">&#x25c0;</div>
+      </div>
+    </div>
     <script src="main.js"></script>
   </body>
 </html>
